# dbtective

./: .cz.toml  CHANGELOG.md  Cargo.toml  README.md  action.yml  dist-workspace.toml  justfile  pyproject.toml
.github/workflows/: build-binaries.yml  pages.yml  release.yml
dbt_project/: dbtective.yml
docs/: hugo.yaml
docs/content/: _index.md
docs/content/docs/: _index.md  cli.md  config.md  faq.md  quickstart.md
docs/content/docs/checks/: Tests.md  _index.md  description.md  has_contract_enforced.md  has_refs.md  is_not_orphaned.md  naming_conventions.md  tags.md
docs/content/docs/contributing/: _index.md  creating_a_new_rule.md
docs/content/docs/rules/: _index.md  max_code_lines.md
docs/content/docs/running/: _index.md  cli.md  github-actions.md
docs/content/snippets/: common_check_config.md
docs/layouts/_shortcodes/: include-markdown.html
scripts/: generate_changelog.sh  update_docs.sh  update_readme.sh
src/: main.rs  wtff.rs
src/cli/: commands.rs  table.rs
src/core/: config.rs  init.rs  manifest.rs  mod.rs  run.rs  traits.rs
src/core/catalog/: columns.rs  mod.rs  nodes.rs  parse_catalog.rs  resource_metadata.rs  source.rs  stats.rs
src/core/checks/: common_traits.rs  mod.rs
src/core/checks/catalog/: catalog_checks.rs  check_columns_are_documented.rs  mod.rs
src/core/checks/common/: child_map.rs  has_description.rs  has_tags.rs  mod.rs  (+1 more)
src/core/config/: applies_to.rs  catalog_rule.rs  check_config.rs  check_config_options.rs  defaults.rs  error_handling.rs  includes_excludes.rs  manifest_rule.rs  mod.rs  parse_config.rs  rule_targets.rs
src/core/dbt_objects/: column.rs  docs.rs  meta.rs  mod.rs  seed.rs  snapshot.rs  source.rs  sql_operation.rs  tags.rs
src/core/manifest/: docs.rs  exposure.rs  group.rs  macro.rs  metric.rs  mod.rs  parse_manifest.rs  saved_query.rs  selector.rs  semantic_model.rs  unit_test.rs
tests/: test_catalog_tests.rs  test_config.rs  test_has_contract_enforced.rs  test_has_description.rs  test_has_refs.rs  test_has_tags.rs  test_init.rs  test_is_not_orphaned.rs  test_max_code_lines.rs  test_naming_convention.rs  test_parsing.rs  test_run.rs  x.json
tests/common/: mod.rs
(+32 files in other folders)
