[package]
name = "dbtective"
version = "0.1.0"
edition = "2021"
description = "A Rust-powered linter and detective for dbt metadata best practices"
license = "MIT"
repository = "https://github.com/feliblo/dbtective"
keywords = ["dbt", "linter", "data", "metadata", "analytics"]
categories = ["command-line-utilities", "development-tools"]
authors = ["feliblo"]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
struct_field_names = "allow"
module_name_repetitions = "allow"

[lints.rust]
unused_imports = "deny"
warnings = "deny"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
strum = "0.27.2"
strum_macros = "0.27.2"
tabled = "0.20.0"

[dev-dependencies]
tempfile = "3.23.0"
